unpackaged/main/default/objects/FPC_Credit_Summary__c/FPC_Credit_Summary__c.object-meta.xml
<CustomObject>
    <description>Credit Report Data Elements</description>
    <label>Credit Summary</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Credit Summary ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>