unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Age of contact.</description>
    <inlineHelpText>Age of contact.</inlineHelpText>
    <label>Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>