unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Alert__c.field-meta.xml
<CustomField>
    <fullName>Alert__c</fullName>
    <description>Credit Alert</description>
    <inlineHelpText>Credit Alert</inlineHelpText>
    <label>Alert</label>
    <length>250</length>
    <type>Text</type>
</CustomField>