unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Business_License_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_License_Date__c</fullName>
    <description>Date that the business license was accepted as complete is recorded.</description>
    <inlineHelpText>Date that the business license was accepted as complete is recorded.</inlineHelpText>
    <label>Business License Date</label>
    <type>DateTime</type>
</CustomField>