unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Business_License_User__c.field-meta.xml
<CustomField>
    <fullName>Business_License_User__c</fullName>
    <description>User who accepted the business license as complete and checked box is recorded.</description>
    <inlineHelpText>User who accepted the business license as complete and checked box is recorded.</inlineHelpText>
    <label>Business License User</label>
    <length>12</length>
    <type>Text</type>
</CustomField>