unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credit Summaries (Contact Name)</relationshipLabel>
    <relationshipName>Credit_Summaries1</relationshipName>
    <type>Lookup</type>
</CustomField>