unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Credit_Net__c.field-meta.xml
<CustomField>
    <fullName>Credit_Net__c</fullName>
    <description>Credit Net summary complete - status</description>
    <inlineHelpText>Check box if the Credit Net summary is completed.</inlineHelpText>
    <label>Credit Net</label>
    <length>1</length>
    <type>Text</type>
</CustomField>