unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Credit_Net_User__c.field-meta.xml
<CustomField>
    <fullName>Credit_Net_User__c</fullName>
    <description>User who accepted the Credit Net summary as complete and checked box is recorded.</description>
    <inlineHelpText>User who accepted the Credit Net summary as complete and checked box is recorded.</inlineHelpText>
    <label>Credit Net User</label>
    <length>12</length>
    <type>Text</type>
</CustomField>