unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/DB_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>DB_Snapshot__c</fullName>
    <description>D&amp;B snapshot complete - status</description>
    <inlineHelpText>Check box if the D&amp;B snapshot is completed.</inlineHelpText>
    <label>DB Snapshot</label>
    <length>1</length>
    <type>Text</type>
</CustomField>