unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/DB_Snapshot_User__c.field-meta.xml
<CustomField>
    <fullName>DB_Snapshot_User__c</fullName>
    <description>User who accepted the D&amp;B snapshot as complete and checked box is recorded.</description>
    <inlineHelpText>User who accepted the D&amp;B snapshot as complete and checked box is recorded.</inlineHelpText>
    <label>DB Snapshot User</label>
    <length>12</length>
    <type>Text</type>
</CustomField>