unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Directory_Assistance_Date__c.field-meta.xml
<CustomField>
    <fullName>Directory_Assistance_Date__c</fullName>
    <description>Date that the directory assistance was accepted as complete is recorded.</description>
    <inlineHelpText>Date that the directory acceptance was accepted as complete is recorded.</inlineHelpText>
    <label>Directory Assistance Date</label>
    <type>DateTime</type>
</CustomField>