unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Directory_Assistance_User__c.field-meta.xml
<CustomField>
    <fullName>Directory_Assistance_User__c</fullName>
    <description>User who accepted the directory assistance as complete and checked box is recorded.</description>
    <inlineHelpText>User who accepted the directory assistance as complete and checked box is recorded.</inlineHelpText>
    <label>Directory Assistance User</label>
    <length>12</length>
    <type>Text</type>
</CustomField>