unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Equipment_Approval_User__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Approval_User__c</fullName>
    <description>User who accepted the equipment approval as complete and checked box is recorded.</description>
    <inlineHelpText>User who accepted the equipment approval as complete and checked box is recorded.</inlineHelpText>
    <label>Equipment Approval User</label>
    <length>12</length>
    <type>Text</type>
</CustomField>