unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Ext_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Ext_Approval_Date__c</fullName>
    <description>Date that the Credit Net summary was accepted as complete is recorded.</description>
    <inlineHelpText>Date that the Credit Net summary was accepted as complete is recorded.</inlineHelpText>
    <label>Ext Approval Date</label>
    <type>DateTime</type>
</CustomField>