unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Fictitious_Name__c.field-meta.xml
<CustomField>
    <fullName>Fictitious_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fictitious name complete - status</description>
    <inlineHelpText>Check box if the fictitious name is completed.</inlineHelpText>
    <label>Fictitious Name</label>
    <type>Checkbox</type>
</CustomField>