unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Fictitious_Name_Date__c.field-meta.xml
<CustomField>
    <fullName>Fictitious_Name_Date__c</fullName>
    <description>Date that the fictitious name was accepted as complete is recorded.</description>
    <inlineHelpText>Date that the fictitious name was accepted as complete is recorded.</inlineHelpText>
    <label>Fictitious Name Date</label>
    <type>DateTime</type>
</CustomField>