unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Fictitious_Name_User__c.field-meta.xml
<CustomField>
    <fullName>Fictitious_Name_User__c</fullName>
    <description>User who accepted the fictitious name as complete and checked box is recorded.</description>
    <inlineHelpText>User who accepted the fictitious name as complete and checked box is recorded.</inlineHelpText>
    <label>Fictitious Name User</label>
    <length>12</length>
    <type>Text</type>
</CustomField>