unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>Invoice Number</description>
    <inlineHelpText>Type in the invoice number associated with the piece of equipment.</inlineHelpText>
    <label>Invoice Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>