unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Leinholder_Address__c.field-meta.xml
<CustomField>
    <fullName>Leinholder_Address__c</fullName>
    <description>Lien holder Address</description>
    <inlineHelpText>Lien holder Address</inlineHelpText>
    <label>Leinholder Address</label>
    <length>64</length>
    <type>Text</type>
</CustomField>