unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Leinholder_Phone__c.field-meta.xml
<CustomField>
    <fullName>Leinholder_Phone__c</fullName>
    <description>Lien holder Phone number</description>
    <inlineHelpText>Lien holder Phone number</inlineHelpText>
    <label>Leinholder Phone</label>
    <length>16</length>
    <type>Text</type>
</CustomField>