unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Leinholder_State__c.field-meta.xml
<CustomField>
    <fullName>Leinholder_State__c</fullName>
    <description>Lien holder State</description>
    <inlineHelpText>Lien holder State</inlineHelpText>
    <label>Leinholder State</label>
    <length>8</length>
    <type>Text</type>
</CustomField>