unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Location_Lease_Date__c.field-meta.xml
<CustomField>
    <fullName>Location_Lease_Date__c</fullName>
    <description>Date that the location lease agreement was accepted as complete is recorded.</description>
    <inlineHelpText>Date that the location lease agreement was accepted as complete is recorded.</inlineHelpText>
    <label>Location Lease Date</label>
    <type>DateTime</type>
</CustomField>