unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Location_Lease_Req__c.field-meta.xml
<CustomField>
    <fullName>Location_Lease_Req__c</fullName>
    <description>Location lease agreement required - status</description>
    <inlineHelpText>Check box if a location lease agreement is required.</inlineHelpText>
    <label>Location Lease Req</label>
    <length>1</length>
    <type>Text</type>
</CustomField>