unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Location_Lease_User__c.field-meta.xml
<CustomField>
    <fullName>Location_Lease_User__c</fullName>
    <description>User who accepted the location lease agreement as complete and checked box is recorded.</description>
    <inlineHelpText>User who accepted the location lease agreement as complete and checked box is recorded.</inlineHelpText>
    <label>Location Lease User</label>
    <length>12</length>
    <type>Text</type>
</CustomField>