unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Master_Vendor_Record__c.field-meta.xml
<CustomField>
    <fullName>Master_Vendor_Record__c</fullName>
    <description>Master Vendor Record</description>
    <inlineHelpText>Master Vendor Record</inlineHelpText>
    <label>Master Vendor Record</label>
    <length>1</length>
    <type>Text</type>
</CustomField>