unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Monthly_Pymts_Mtg__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Pymts_Mtg__c</fullName>
    <description>Contact's monthly mortgage payments.</description>
    <inlineHelpText>Contact's monthly mortgage payments.</inlineHelpText>
    <label>Monthly Pymts Mtg</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>