unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Num_30_Delinq__c.field-meta.xml
<CustomField>
    <fullName>Num_30_Delinq__c</fullName>
    <description>Number of 30 Day Delinquencies that the contact has.</description>
    <inlineHelpText>Number of 30 Day Delinquencies that the contact has.</inlineHelpText>
    <label>Num 30 Delinq</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>