unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Num_Cur_Derogatory__c.field-meta.xml
<CustomField>
    <fullName>Num_Cur_Derogatory__c</fullName>
    <description>Contact's current Number of Derogatory accounts.</description>
    <inlineHelpText>Contact's current Number of Derogatory accounts.</inlineHelpText>
    <label>Num Cur Derogatory</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>