unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Num_Current__c.field-meta.xml
<CustomField>
    <fullName>Num_Current__c</fullName>
    <description>Number of current accounts that the contact has.</description>
    <inlineHelpText>Number of current accounts that the contact has.</inlineHelpText>
    <label>Num Current</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>