unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Num_Fraud__c.field-meta.xml
<CustomField>
    <fullName>Num_Fraud__c</fullName>
    <description>Number of fraud accounts that the customer has.</description>
    <inlineHelpText>Number of fraud accounts that the customer has.</inlineHelpText>
    <label>Num Fraud</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>