unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Num_Inq_90__c.field-meta.xml
<CustomField>
    <fullName>Num_Inq_90__c</fullName>
    <description>Number of inquiries that the contact has in the last 90 days.</description>
    <inlineHelpText>Number of inquiries that the contact has in the last 90 days.</inlineHelpText>
    <label>Num Inq 90</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>