unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Num_Inq_Collections__c.field-meta.xml
<CustomField>
    <fullName>Num_Inq_Collections__c</fullName>
    <description>Number of collections inquiries that the contact has.</description>
    <inlineHelpText>Number of collections inquiries that the contact has.</inlineHelpText>
    <label>Num Inq Collections</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>