unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Num_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Num_Mortgage__c</fullName>
    <description>Number of mortgage accounts the contact has.</description>
    <inlineHelpText>Number of mortgage accounts the contact has.</inlineHelpText>
    <label>Num Mortgage</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>