unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Num_Pub_Records__c.field-meta.xml
<CustomField>
    <fullName>Num_Pub_Records__c</fullName>
    <description>Number of public records that the customer has.</description>
    <inlineHelpText>Number of public records that the customer has.</inlineHelpText>
    <label>Num Pub Records</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>