unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Num_Tradelines__c.field-meta.xml
<CustomField>
    <fullName>Num_Tradelines__c</fullName>
    <description>Number of Tradelines that the contact has.</description>
    <inlineHelpText>Number of Tradelines that the contact has.</inlineHelpText>
    <label>Num Tradelines</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>