unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Original_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Invoice_Date__c</fullName>
    <description>Date that the original invoice was accepted as complete is recorded.</description>
    <inlineHelpText>Date that the original invoice was accepted as complete is recorded.</inlineHelpText>
    <label>Original Invoice Date</label>
    <type>DateTime</type>
</CustomField>