unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Payoff_1_Contact__c.field-meta.xml
<CustomField>
    <fullName>Payoff_1_Contact__c</fullName>
    <description>Payoff 1 Contact</description>
    <inlineHelpText>Payoff 1 Contact</inlineHelpText>
    <label>Payoff 1 Contact</label>
    <length>64</length>
    <type>Text</type>
</CustomField>