unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Payoff_1_Per_Diem__c.field-meta.xml
<CustomField>
    <fullName>Payoff_1_Per_Diem__c</fullName>
    <description>Payoff 1 Per Diem</description>
    <inlineHelpText>Payoff 1 Per Diem</inlineHelpText>
    <label>Payoff 1 Per Diem</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>