unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Payoff_1_Phone__c.field-meta.xml
<CustomField>
    <fullName>Payoff_1_Phone__c</fullName>
    <description>Payoff 1 Phone</description>
    <inlineHelpText>Payoff 1 Phone</inlineHelpText>
    <label>Payoff 1 Phone</label>
    <length>16</length>
    <type>Text</type>
</CustomField>