unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Payoff_1_State__c.field-meta.xml
<CustomField>
    <fullName>Payoff_1_State__c</fullName>
    <description>Payoff 1 State</description>
    <inlineHelpText>Payoff 1 State</inlineHelpText>
    <label>Payoff 1 State</label>
    <length>8</length>
    <type>Text</type>
</CustomField>