unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Payoff_1_Title__c.field-meta.xml
<CustomField>
    <fullName>Payoff_1_Title__c</fullName>
    <description>Payoff 1 Title</description>
    <inlineHelpText>Payoff 1 Title</inlineHelpText>
    <label>Payoff 1 Title</label>
    <length>64</length>
    <type>Text</type>
</CustomField>