unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Payoff_1_Type__c.field-meta.xml
<CustomField>
    <fullName>Payoff_1_Type__c</fullName>
    <description>Payoff 1 Type</description>
    <inlineHelpText>Payoff 1 Type</inlineHelpText>
    <label>Payoff 1 Type</label>
    <length>16</length>
    <type>Text</type>
</CustomField>