unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Payoff_2_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payoff_2_Amount__c</fullName>
    <description>Payoff Amount #2</description>
    <inlineHelpText>Type in the payoff amount.</inlineHelpText>
    <label>Payoff 2 Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>