unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Payoff_2_Payee__c.field-meta.xml
<CustomField>
    <fullName>Payoff_2_Payee__c</fullName>
    <description>Payoff 2 Payee</description>
    <inlineHelpText>Type in the payoff payee.</inlineHelpText>
    <label>Payoff 2 Payee</label>
    <length>64</length>
    <type>Text</type>
</CustomField>