unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Pct_Rev_Used__c.field-meta.xml
<CustomField>
    <fullName>Pct_Rev_Used__c</fullName>
    <description>Percentage of revolving credit available that the contact has.</description>
    <inlineHelpText>Percentage of revolving credit available that the customer is using.</inlineHelpText>
    <label>Pct Rev Used</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>