unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Profile_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Profile_Complete_Date__c</fullName>
    <description>Date that the profile was accepted as complete is recorded.</description>
    <inlineHelpText>Date that the profile was accepted as complete is recorded.</inlineHelpText>
    <label>Profile Complete Date</label>
    <type>DateTime</type>
</CustomField>