unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Resale_Cert_Date__c.field-meta.xml
<CustomField>
    <fullName>Resale_Cert_Date__c</fullName>
    <description>Date that the resale certificate was accepted as complete is recorded.</description>
    <inlineHelpText>Date that the resale certificate was accepted as complete is recorded.</inlineHelpText>
    <label>Resale Cert Date</label>
    <type>DateTime</type>
</CustomField>