unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Resale_Cert_User__c.field-meta.xml
<CustomField>
    <fullName>Resale_Cert_User__c</fullName>
    <description>User who accepted the resale certificate as complete and checked box is recorded.</description>
    <inlineHelpText>User who accepted the resale certificate as complete and checked box is recorded.</inlineHelpText>
    <label>Resale Cert User</label>
    <length>12</length>
    <type>Text</type>
</CustomField>