unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/SOS_User__c.field-meta.xml
<CustomField>
    <fullName>SOS_User__c</fullName>
    <description>User who accepted the SOS as complete and checked box is recorded.</description>
    <inlineHelpText>User who accepted the SOS as complete and checked box is recorded.</inlineHelpText>
    <label>SOS User</label>
    <length>12</length>
    <type>Text</type>
</CustomField>