unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Stip_2_User__c.field-meta.xml
<CustomField>
    <fullName>Stip_2_User__c</fullName>
    <description>User who accepted the stipulation 2 as complete and checked box is recorded.</description>
    <inlineHelpText>User who accepted the stipulation 2 as complete and checked box is recorded.</inlineHelpText>
    <label>Stip 2 User</label>
    <length>12</length>
    <type>Text</type>
</CustomField>