unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Total_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Past_Due__c</fullName>
    <description>Total that the contact is past due.</description>
    <inlineHelpText>Total that the contact is past due.</inlineHelpText>
    <label>Total Past Due</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>