unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Total_Rev_Avail__c.field-meta.xml
<CustomField>
    <fullName>Total_Rev_Avail__c</fullName>
    <description>Contact's Total Revolving Credit Available.</description>
    <inlineHelpText>Contact's Total Revolving Credit Available.</inlineHelpText>
    <label>Total Rev Avail</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>