unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Total_Rev_Debt__c.field-meta.xml
<CustomField>
    <fullName>Total_Rev_Debt__c</fullName>
    <description>Total revolving debt that the contact has.</description>
    <inlineHelpText>Total revolving debt that the contact has.</inlineHelpText>
    <label>Total Rev Debt</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>