unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Utility_Bill_User__c.field-meta.xml
<CustomField>
    <fullName>Utility_Bill_User__c</fullName>
    <description>User who accepted the utility bill as complete and checked box is recorded.</description>
    <inlineHelpText>User who accepted the utility bill as complete and checked box is recorded.</inlineHelpText>
    <label>Utility Bill User</label>
    <length>12</length>
    <type>Text</type>
</CustomField>