unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Vendor_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Approval_Date__c</fullName>
    <description>Date that the vendor approval was accepted as complete is recorded.</description>
    <inlineHelpText>Date that the vendor approval was accepted as complete is recorded.</inlineHelpText>
    <label>Vendor Approval Date</label>
    <type>DateTime</type>
</CustomField>