unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Vendor_Approval_User__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Approval_User__c</fullName>
    <description>User who accepted the vendor approval as complete and checked box is recorded.</description>
    <inlineHelpText>User who accepted the vendor approval as complete and checked box is recorded.</inlineHelpText>
    <label>Vendor Approval User</label>
    <length>12</length>
    <type>Text</type>
</CustomField>