unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Vendor_Pmt_Amount__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Pmt_Amount__c</fullName>
    <description>Vendor payment amount.</description>
    <inlineHelpText>Type in the amount paid to the equipment vendor in consideration of the equipment purchased.</inlineHelpText>
    <label>Vendor Pmt Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>