unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Vendor_Pmt_Date__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Pmt_Date__c</fullName>
    <description>Date that the vendor payment was checked as complete is recorded.</description>
    <inlineHelpText>Date that the vendor payment was checked as complete is recorded.</inlineHelpText>
    <label>Vendor Pmt Date</label>
    <type>DateTime</type>
</CustomField>