unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Vendor_Pmt_User__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Pmt_User__c</fullName>
    <description>User who checked that the vendor payment as complete and checked box is recorded.</description>
    <inlineHelpText>User who checked that the vendor payment as complete and checked box is recorded.</inlineHelpText>
    <label>Vendor Pmt User</label>
    <length>12</length>
    <type>Text</type>
</CustomField>