unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Yrs_At_Addr__c.field-meta.xml
<CustomField>
    <fullName>Yrs_At_Addr__c</fullName>
    <description>Years that contact has been at address.</description>
    <inlineHelpText>Years that contact has been at address.</inlineHelpText>
    <label>Yrs At Addr</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>