unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Yrs_At_Addr_Prev__c.field-meta.xml
<CustomField>
    <fullName>Yrs_At_Addr_Prev__c</fullName>
    <description>Years contact was at previous address</description>
    <inlineHelpText>Years contact was at previous address</inlineHelpText>
    <label>Yrs At Addr Prev</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>