unpackaged/main/default/objects/FPC_Credit_Summary__c/fields/Yrs_Credit_Exp__c.field-meta.xml
<CustomField>
    <fullName>Yrs_Credit_Exp__c</fullName>
    <description>Years of credit experience that contact has.</description>
    <inlineHelpText>Years of credit experience that contact has.</inlineHelpText>
    <label>Yrs Credit Exp</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>